# secauth

./: .easignore  .gitignore  BUILD.md  LICENSE  README-zh_CN.md  README.md  app.json  eas.json  metro.config.js  package-lock.json  package.json
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml
app/: +not-found.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  add.tsx  index.tsx  profile.tsx
components/: AccountCard.tsx  CategoryFilter.tsx  CloudSyncSettings.tsx  ConnectedAccountsScreen.tsx  EmailIntegrationScreen.tsx  EmailParsingScreen.tsx  EmailSettingsScreen.tsx  QRScanner.tsx  SearchBar.tsx  SyncFrequencyModal.tsx  index.ts
components/account/: AccountCard.tsx  ManualAddForm.tsx  index.ts
components/auth/: AutoLockSettingsModal.tsx  PinModal.tsx  index.ts
components/core/: AccountTypeFilter.tsx  index.ts
components/layout/: Collapsible.tsx  HelloWave.tsx  ParallaxScrollView.tsx  Screen.tsx  ScreenHeader.tsx  SmartScreen.tsx  index.ts
components/profile/: LoadingModal.tsx  ProfileHeader.tsx  SettingItem.tsx  SettingsGroup.tsx  index.ts
components/settings/: AboutAppScreen.tsx  CloudSyncSettings.tsx  ConnectedAccountsScreen.tsx  EmailInputScreen.tsx  EmailIntegrationScreen.tsx  EmailParsingScreen.tsx  EmailSettingsScreen.tsx  ExportDataScreen.tsx  HelpCenterScreen.tsx  ImportDataScreen.tsx  SyncFrequencyModal.tsx  index.ts
components/ui/: AutoLockSettings.tsx  CloudSyncStaticScreen.tsx  ContextMenu.tsx  EditNameModal.tsx  LanguageSelector.tsx  PINEntry.tsx  QRCodeModal.tsx  ThemeModal.tsx  ThemeSelector.tsx  (+2 more)
constants/: Colors.ts  ProfileSettings.ts  mockData.ts
contexts/: SettingsContext.tsx
hooks/: useAddModals.ts  useColorScheme.ts  useColorScheme.web.ts  useLanguage.ts  useProfileModals.ts  useProfileSettings.ts  useSafeArea.ts  useTheme.ts
modules/crypto-native/android/src/main/cpp/: CMakeLists.txt  CryptoEngine.cpp  CryptoEngine.h  CryptoNativeJNI.cpp
modules/otp-native/android/src/main/cpp/: CMakeLists.txt  OtpGenerator.cpp  OtpGenerator.h  OtpNativeJNI.cpp
scripts/: build-local.sh  generate-changelog.js  rebuild-icons.sh  setup-dev.sh  test-build.sh
services/: accountService.ts  autoLock.ts  biometricAuth.ts  brandIconService.tsx  cryptoService.ts  emailService.ts  otpService.ts  simpleTotpService.ts  totpService.ts
types/: auth.ts  theme.ts
utils/: i18n.ts  logger.ts  loggerConfig.ts  styleHelpers.ts  totpParser.ts
(+55 files in other folders)
